cluster/infra/kube-auth/lldap/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: lldap
spec:
  targetRefs:
    - group: 'gateway.networking.k8s.io'
      kind: 'HTTPRoute'
      name: lldap

  extAuth:
    failOpen: false
    includeRouteMetadata: true
    headersToExtAuth:
      - accept
      - cookie
      - location
      - authorization
      - proxy-authorization
      - header-authorization
      - x-forwarded-proto
      - x-forwarded-for

    grpc:
      backendRefs:
        - group: ''
          kind: Service
          name: authroute
          namespace: kube-auth
          port: 8080
